--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -1,7 +1,7 @@
 @import 'common';
 @import 'core';
 @import 'team';
-@import 'account';
+// @import 'account';
 // @import 'admin';
 // @import 'editbox';
 // @import 'addressbook';
