--- a/src/drumee/builtins/window/account/security/skin/password-meter.scss
+++ b/src/drumee/builtins/window/account/security/skin/password-meter.scss
@@ -22,7 +22,7 @@
       height: 100%;
       width: 100%;
       position: absolute;
-      background-color: $account-default-background;      
+      background-color: var(--default-background);      
     }
   }
 }
