--- a/src/drumee/builtins/window/account/skin/topbar.scss
+++ b/src/drumee/builtins/window/account/skin/topbar.scss
@@ -3,8 +3,8 @@
     height: 44px;
     width: 100%;
     border-bottom: none;
-    background-color: $account-background-header;
-    @include typo ($size: 18px, $line: 36px, $color: $account-default-text-reverse, $weight: 400);
+    background-color: var(--account-header-bg);
+    @include typo ($size: 18px, $line: 36px, $color: var(--default-text-reverse), $weight: 400);
     justify-content: center;
 
     &-icon {
@@ -28,7 +28,7 @@
 
   &__navbar {
     align-items: center;
-    background-color: $account-default-background ;
+    background-color: var(--default-background);
     justify-content: center;
     margin: 20px 0 30px 0;
     width: 100%;
@@ -39,7 +39,7 @@
       margin: 0;
       max-width: calc(100% / 6);
       cursor: pointer;
-      @include typo($line: 36px, $size: 16px, $color: $account-default-text-color, $weight: 400);
+      @include typo($line: 36px, $size: 16px, $color: var(--default-text-color), $weight: 400);
       @include overflow-text;
 
       .inner {
@@ -50,17 +50,17 @@
 
       &[data-state="1"],
       &[data-radio="on"] {
-        background-color: $account-default-background-hover;
-        color: $account-default-text-reverse;
+        background-color: var(--default-background-hover);
+        color: var(--default-text-reverse);
         border-radius: var(--border-radius-tiny);
 
         &:hover {
-          color: $account-default-text-hover ;
+          color: var(--default-text-hover);
         }
       }
 
       &:hover {
-        color: $account-backgroundless-text-hover;
+        color: var(--backgroundless-text-hover);
       }
 
       @media (min-width: 900px) {
