--- a/src/drumee/builtins/window/account/data/skin/deletion.scss
+++ b/src/drumee/builtins/window/account/data/skin/deletion.scss
@@ -12,7 +12,7 @@
     width: 100%;
     min-height: 300px;
     max-width: 700px;
-    background-color: $account-default-background;   //var(--popup-background);
+    background-color: var(--default-background);   //var(--popup-background);
     .drumee-text.inner{
       justify-content: center;
       align-items: center;
@@ -34,7 +34,7 @@
     justify-content: center;
     padding: 10px;
     &.text{
-      @include typo($size:18px,$line:26px,$color:$account-default-text-caution);//$weight:400
+      @include typo($size:18px,$line:26px,$color: var(--default-text-caution));//$weight:400
     }
   }
 
@@ -95,7 +95,7 @@
     .step-label{
      // font-style: italic;
      color:var(--state-1-text);
-      @include typo($size:14px,$line:14px,$color:$account-default-text-color, $weight:300); //$color: var(--btn-rollback-text)
+      @include typo($size:14px,$line:14px,$color: var(--default-text-color), $weight:300); //$color: var(--btn-rollback-text)
     }
   }
   &__guidelines{
@@ -103,7 +103,7 @@
     min-height: 174px;
     justify-content: center;
     text-align: left;
-    @include typo($size:16px,$line:24px,$color:$account-default-text-color, $weight:300); //$color: var(--btn-rollback-text),$weight:400$size:14px
+    @include typo($size:16px,$line:24px,$color: var(--default-text-color), $weight:300); //$color: var(--btn-rollback-text),$weight:400$size:14px
     p{
       margin-bottom: 10px;
     }
@@ -122,10 +122,10 @@
 //      @include typo($size:16px,$line:26px,$weight:300,$color: var(--default-text-color));
     }
     .total{
-      @include typo($size:14px,$line:26px,$weight:300,$color:$account-default-text-color);
+      @include typo($size:14px,$line:26px,$weight:300,$color: var(--default-text-color));
     }
     .label{
-      @include typo($size:16px,$line:26px,$weight:300,$color:$account-default-text-color);
+      @include typo($size:16px,$line:26px,$weight:300,$color: var(--default-text-color));
     }
     .bar-value{
       height: 4px;
@@ -141,7 +141,7 @@
     flex-direction: row;
     justify-content: center;
     justify-items: center;
-    @include typo($size:14px,$line:18px,$color:$account-default-text-color,$weight:300);//$size:12px
+    @include typo($size:14px,$line:18px,$color: var(--default-text-color),$weight:300);//$size:12px
     &[data-state="0"]{
       display: none;
       svg{
@@ -152,7 +152,7 @@
     }
     &[data-state="1"]{
       svg{
-        color:$account-checkbox-svg-hover;//$checkbox-svg-hover;
+        color:var(--account-checkbox-svg-hover);//$checkbox-svg-hover;
         border-color:var(--state-1-border);     
       }
     }
@@ -237,7 +237,7 @@
   &__message{
     .l-1{
       text-align: center;
-      @include typo($size: 16px, $line: 26px, $color:$account-default-text-alert);
+      @include typo($size: 16px, $line: 26px, $color: var(--default-text-alert));
     }
   }
   &__footer{
@@ -249,7 +249,7 @@
     width: 315px;
     margin:80px auto auto auto; //auto;
     &-text{
-      @include typo($size: 16px, $line: 26px, $color: $account-default-text-color);
+      @include typo($size: 16px, $line: 26px, $color: var(--default-text-color));
     }
   }
 }
