--- a/src/drumee/builtins/window/account/data/skin/index.scss
+++ b/src/drumee/builtins/window/account/data/skin/index.scss
@@ -47,7 +47,7 @@
 
   &__btn {
     &.delete {  
-      background-color:$account-default-background;
+      background-color:var(--default-background);
       border:none;
       left: 641px;
       margin-top: 6px;
@@ -58,7 +58,7 @@
 
       &:hover {
         color:var(--eorange-sunset);
-        background-color:$account-default-background;  
+        background-color:var(--default-background);  
       }
     }
 
@@ -99,7 +99,7 @@
       height: 100%;
       overflow: visible;
       text {
-        @include typo($size:14px,$line:24px,$color:$account-default-text-reverse,$weight:400);
+        @include typo($size:14px,$line:24px,$color: var(--default-text-reverse),$weight:400);
       }
     }
   }
@@ -119,7 +119,7 @@
       margin-right: 15px;
     }
     .log-name, .log-date{
-      @include typo($size:16px,$line:30px,$weight:300,$color:$account-default-text-color);
+      @include typo($size:16px,$line:30px,$weight:300,$color: var(--default-text-color));
     }
     .log-date{
       margin: 0 auto;
@@ -127,7 +127,7 @@
     }
     
     &-placeholder {
-      @include typo($size:18px,$line:45px,$color:$account-default-text-color,$weight:400);
+      @include typo($size:18px,$line:45px,$color: var(--default-text-color),$weight:400);
       svg {
         width: 45px;
         margin-right: 20px;
@@ -148,7 +148,7 @@
     &[data-state="open"]{
       right:0;
       bottom:0;
-      background-color: $account-default-transparent-black;
+      background-color: var(--default-transparent-black);
       justify-items:center;
       align-items:center;
       justify-content:center;
@@ -159,7 +159,7 @@
     width: 315px;
     margin:80px auto auto auto; 
     &-text{
-      @include typo($size: 16px, $line: 26px, $color: $account-default-text-color);
+      @include typo($size: 16px, $line: 26px, $color: var(--default-text-color));
     }
   }
   &__footer{
