--- a/src/drumee/builtins/window/account/profile/avatar/skin/index.scss
+++ b/src/drumee/builtins/window/account/profile/avatar/skin/index.scss
@@ -16,7 +16,7 @@
     position: relative;
    // border: 1px solid #979797;
     border-radius:$default-border-radius;
-    background-color:$account-background-user-icon;//hsla(0,0%,78.4%,.5);// #D8D8D8;
+    background-color:var(--background-user-icon);//hsla(0,0%,78.4%,.5);// #D8D8D8;
     box-shadow: none;
     margin: 0 auto;
         //border-radius: 50%;
@@ -38,7 +38,7 @@
   &__main{
     width: 100%;
     height: 100%;
-    background-color: $account-default-background; 
+    background-color: var(--default-background); 
   }
   .user-profile{
     &__chart--fg{
@@ -51,7 +51,7 @@
   .user-avatar__ui{
     &[data-default="1"]{
       svg{
-        fill:$account-default-icon-reverse;//$default-icon-reverse;    
+        fill:var(--default-icon-reverse);//$default-icon-reverse;    
       }
     }
   }
@@ -77,7 +77,7 @@
   &.btn {
     background: var(--eblue);// #4A90E2;
     border-radius: 50%;
-    color:$account-default-icon-reverse;
+    color:var(--default-icon-reverse);
     //margin: 1px 7px;
     margin:-8px -11px;
   }
@@ -97,7 +97,7 @@
   }
 
   &__menu-dropdown{
-    background-color: $account-default-background;
+    background-color: var(--default-background);
     box-shadow: var(--shadow-container);// 0 5px 8px 1px rgba(63,79,117,0.13), 0 6px 16px 0 rgba(86,65,113,0.08), 0 2px 14px 0 rgba(194,185,203,0);
     border-radius: $default-border-radius-bottom;// 0 0px 6px 6px;//2px;
     padding: 6px 11px; //6px 16px
@@ -116,13 +116,13 @@
   &__menu-item{
     padding: 6px 5px; //6px 0;
     cursor: pointer;
-    @include typo($size:14px,$line:16px,$weight:300,$color:$account-default-text-color);
+    @include typo($size:14px,$line:16px,$weight:300,$color: var(--default-text-color));
     &:hover {
-      color: $account-backgroundless-text-hover ;//#879BFF;
+      color: var(--backgroundless-text-hover);//#879BFF;
     }
     &:active {
       background-color: #879BFF;
-      color: $account-default-text-reverse;
+      color: var(--default-text-reverse);
     }  
   }
 }
