--- a/src/drumee/builtins/window/account/profile/skin/field.scss
+++ b/src/drumee/builtins/window/account/profile/skin/field.scss
@@ -24,11 +24,11 @@
     width: 100%;
 
     &.static-mode:hover {
-      background-color:$account-default-background-hover;
+      background-color:var(--default-background-hover);
       
       *{
-        background-color:$account-default-background-hover;
-        color: $account-default-text-hover;
+        background-color:var(--default-background-hover);
+        color: var(--default-text-hover);
       }
 
       & .action-item {
@@ -42,7 +42,7 @@
         
         & section {
          // background: $default-background;
-          color:$account-default-text-reverse; // $default-background-hover;
+          color:var(--default-text-reverse); // $default-background-hover;
           border: 1px solid var(--ewhite);
           padding:  5px;
           border-radius:$default-border-radius;
@@ -53,7 +53,7 @@
   }
 
   &__title {
-    @include typo($size: 24px, $line: 32px, $weight: 300, $color:$account-default-text-color);
+    @include typo($size: 24px, $line: 32px, $weight: 300, $color: var(--default-text-color));
   }
 
   &__label {
@@ -68,7 +68,7 @@
       @include typo($size: 16px, $line: 21px, $color: var(--secondary-text-color));
 
       &.error {
-        color: $account-default-text-error ;//#fe6790;
+        color: var(--default-text-error);//#fe6790;
         //font-weight: 400;
       }
     }
@@ -76,7 +76,7 @@
 
   &__options-wrapper {
     align-items: center;
-    background-color: $account-default-background;//var(--ewhite);
+    background-color: var(--default-background);//var(--ewhite);
     
     &.action-item {
       align-items: center;
@@ -96,7 +96,7 @@
 
   &__note {
     align-items: center;
-    @include typo($size: 16px, $line: 27px, $color: $account-default-text-color);
+    @include typo($size: 16px, $line: 27px, $color: var(--default-text-color));
     
     &.navigation {
       left: -8px;
@@ -112,7 +112,7 @@
     }
 
     &-picto {
-      color: $account-field-icon;//var(--eblue);
+      color: var(--account-field-icon);//var(--eblue);
       height: 29px;
       margin-bottom:auto;
       margin-left:50px;
@@ -152,14 +152,14 @@
   }
 
   input {
-    @include typo($size: 16px, $line: 27px, $color: $account-default-text-color);
+    @include typo($size: 16px, $line: 27px, $color: var(--default-text-color));
     background: transparent;;
-    border-bottom:1px solid $account-default-entry-border-bottom;//var(--eviolet);
+    border-bottom:1px solid var(--default-entry-border-bottom);//var(--eviolet);
     cursor: text;
     text-overflow: ellipsis;
     width: 200px;
     &::placeholder{
-      @include typo($size: 16px, $line: 27px,$weight: 300, $color: $account-default-text-placeholder);
+      @include typo($size: 16px, $line: 27px,$weight: 300, $color: var(--default-text-placeholder));
     }
   }
 }
