--- a/src/drumee/builtins/window/account/security/skin/index.scss
+++ b/src/drumee/builtins/window/account/security/skin/index.scss
@@ -46,7 +46,7 @@
   }
   &__tooltips{
     width: 500px;
-    background: $account-default-background; 
+    background: var(--default-background); 
   }
 
   &__note {
@@ -55,13 +55,13 @@
       text-align: left;//center;
       position: absolute;
       padding: 258px 0 10px 11px;
-      @include typo($size: 12px, $line: 14px, $color:$account-default-text-alert);//$account-security-text-color); var(--eorange-crusta)
+      @include typo($size: 12px, $line: 14px, $color: var(--default-text-alert));//$account-security-text-color); var(--eorange-crusta)
     }
   }
 
   &__icon {
     &.close {
-      color:$account-default-thinline-icon;
+      color:var(--default-thinline-icon);
       cursor: pointer;
       height: 10px;
       padding: 0;
@@ -70,7 +70,7 @@
       width: 10px;
       
       &:hover {
-        color: $account-default-thinline-icon-hover;
+        color: var(--default-thinline-icon-hover);
       }
     }
   }
