--- a/src/drumee/builtins/window/adminpanel/pages/members/skin/security.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/members/skin/security.scss
@@ -80,7 +80,7 @@
     }
 
     &.sms-icon {
-      color: $account-sms-color;
+      color: var(--account-sms-color);
       height: 32px;
       width: 25px;
       margin-top: 30px;
