--- a/src/drumee/builtins/media/minifyer/skin/effects.scss
+++ b/src/drumee/builtins/media/minifyer/skin/effects.scss
@@ -22,7 +22,7 @@
   width: 100%;
 
   svg.icon.hub {
-    fill : $teamroom-special-icon ;
+    fill : var(--teamroom-main-light);
   }
 
   &:after {
