--- a/src/drumee/builtins/window/meeting/skin/index.scss
+++ b/src/drumee/builtins/window/meeting/skin/index.scss
@@ -10,7 +10,7 @@
   @import 'builtins/webrtc/skin/remote';
 
   &__header {
-    background-color: $team-background-header;
+    background-color: var(--teamroom-main);
   }
 
 }
