--- a/src/drumee/builtins/window/skin/group/header/breadcrumbs.scss
+++ b/src/drumee/builtins/window/skin/group/header/breadcrumbs.scss
@@ -79,7 +79,7 @@
       &.purple,
       &.team,
       &.private {
-        color: $team-background-header; 
+        color: var(--teamroom-main); 
       }
 
       &.orange,
