--- a/src/drumee/modules/desk/wm/notification/widget/notification-list-item/skin/index.scss
+++ b/src/drumee/modules/desk/wm/notification/widget/notification-list-item/skin/index.scss
@@ -121,7 +121,7 @@
       }
 
       &.team { //purple
-        color: $team-background-header;//$teamroom-background;
+        color: var(--teamroom-main);//$teamroom-background;
       }
 
       &.share {// #orange
