--- a/src/drumee/builtins/media/grid/skin/effects.scss
+++ b/src/drumee/builtins/media/grid/skin/effects.scss
@@ -52,7 +52,7 @@
   height: 100%;
   position: absolute;
   svg.icon.hub{
-    fill : $teamroom-special-icon ;
+    fill : var(--teamroom-main-light);
   }
   &:after{
     content: " ";
