--- a/src/drumee/builtins/media/grid/skin/filename.scss
+++ b/src/drumee/builtins/media/grid/skin/filename.scss
@@ -20,7 +20,7 @@
 
     &.private.hub {
       color: var(--default-text-color);
-      background-color: $teamroom-main-background-filename;
+      background-color: var(--teamroom-filename-bg);
     }
 
     &.share.hub {
@@ -90,7 +90,7 @@
     z-index: 20;
 
     &.private.hub {
-      background-color: $teamroom-main-background-filename;
+      background-color: var(--teamroom-filename-bg);
     }
 
     &.share.hub {
