--- a/src/drumee/builtins/media/row/skin/hub.scss
+++ b/src/drumee/builtins/media/row/skin/hub.scss
@@ -80,9 +80,9 @@
       position: absolute;
       top: 0;
       right: 0;
-      border-top: 5px solid $teamroom-main-light;
+      border-top: 5px solid var(--teamroom-main-light);
       border-left: 5px solid transparent;
-      border-right: 5px solid $teamroom-main-light;
+      border-right: 5px solid var(--teamroom-main-light);
       border-radius: 0 3px 0 0;
       height: 0;
       width: 18px;
