--- a/src/drumee/builtins/widget/invitation/sharee/roll/skin/index.scss
+++ b/src/drumee/builtins/widget/invitation/sharee/roll/skin/index.scss
@@ -11,7 +11,7 @@
 
   &__label {
     justify-content: center;
-    @include typo($color: $teamroom-text-color, $size: 16px, $line: 22px, $weight: 400);
+    @include typo($color: var(--teamroom-main), $size: 16px, $line: 22px, $weight: 400);
 
     .content {
       &[data-state="0"] {
