--- a/src/drumee/builtins/window/screenshare/skin/topbar.scss
+++ b/src/drumee/builtins/window/screenshare/skin/topbar.scss
@@ -15,7 +15,7 @@
         background-color: var(--sharebox-main);
       }
       &[data-area="private"] {
-        background-color: $team-background-header;
+        background-color: var(--teamroom-main);
       }
 
     }
