--- a/src/drumee/builtins/window/team/skin/change-owner.scss
+++ b/src/drumee/builtins/window/team/skin/change-owner.scss
@@ -3,7 +3,7 @@
   .window-confirm__main{
     max-height:355px;// 350px; //320px;
     border-radius:$default-border-radius-bottom;
-    background-color: $team-default-background;
+    background-color: var(--default-background);
     width: 100%;//450px;
   }
 
@@ -19,14 +19,14 @@
     .title{
       margin-top: 20px;
     //  padding-bottom: 20px;
-      @include typo($size:18px,$line:16px,$weight:400,$color:$teamroom-text-color);
+      @include typo($size:18px,$line:16px,$weight:400,$color: var(--teamroom-main));
     }
     .information{
       padding: 27px 50px;//10px 60px;
-      @include typo($size:16px,$line:1.5,$weight:400,$color:$team-default-text-color);//$size:14px,
+      @include typo($size:16px,$line:1.5,$weight:400,$color: var(--default-text-color));//$size:14px,
     }
     .name{
-      @include typo($size:16px,$line:22px,$weight:400,$color:$team-secondary-text-color);//$size:14px,$weight:400,$line:16px
+      @include typo($size:16px,$line:22px,$weight:400,$color: var(--secondary-text-color));//$size:14px,$weight:400,$line:16px
     }
   }
 }
