--- a/src/drumee/builtins/window/team/skin/topbar.scss
+++ b/src/drumee/builtins/window/team/skin/topbar.scss
@@ -8,7 +8,7 @@
     }
 
     &__icon {
-      color: $team-default-icon-reverse;
+      color: var(--default-icon-reverse);
       cursor: pointer;
       height:16px;
       margin:auto 0px auto 15px;
@@ -16,7 +16,7 @@
       width:16px;
 
       &:hover { 
-        color:$team-default-icon-hover;
+        color:var(--default-icon-hover);
       }
 
       &.link {
@@ -47,7 +47,7 @@
 
     &__menu-trigger {
       padding:1px;
-      color:$team-default-icon-reverse;
+      color:var(--default-icon-reverse);
       cursor: pointer;
       width: 16px;
       height: 16px;
@@ -62,7 +62,7 @@
       }
       
       .menu-items {
-        background-color:$team-default-background;
+        background-color:var(--default-background);
         background-color: rgba(241, 227, 244, 0.25);
         border-radius: 4px;
         flex-direction: row;
@@ -75,14 +75,14 @@
       }
 
       &:hover {
-        color: $team-default-background-hover;
+        color: var(--default-background-hover);
       }
     }
 
     &__count {
-      @include typo($size:8px, $line:12px, $weight:400, $color: $teamroom-text-color);
+      @include typo($size:8px, $line:12px, $weight:400, $color: var(--teamroom-main));
       align-items: center;
-      background-color: $team-default-background;       
+      background-color: var(--default-background);       
       border-radius:50%;
       height:12px;
       justify-content: center;
