--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -1,6 +1,6 @@
 @import 'common';
-@import 'core';
-@import 'team';
+// @import 'core';
+// @import 'team';
 // @import 'account';
 // @import 'admin';
 // @import 'editbox';
