--- a/src/drumee/skin/mixins/drumee.scss
+++ b/src/drumee/skin/mixins/drumee.scss
@@ -4,7 +4,7 @@
 * ==================================================================== */
 @import './border.scss';
 @import './box-shadow.scss';
-@import './colors/index.scss';
+// @import './colors/index.scss';
 @import './typo.scss';
 @import './utils.scss';
 @import './vendor.scss';
