--- a/src/drumee/libs/reader/profile/skin/index.scss
+++ b/src/drumee/libs/reader/profile/skin/index.scss
@@ -4,11 +4,8 @@
 #   TYPE : Backoffice Main Style
 # ===================================================================**/
 
-@import 'mixins/colors/index.scss';
-@import 'mixins/typo.scss';
-@import 'mixins/border.scss';
-@import 'mixins/exports.scss';
 
+@import "mixins/drumee";
 
 .user-profile{
   &__ui{
