--- a/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/validity.scss
+++ b/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/validity.scss
@@ -32,7 +32,7 @@
           &.fr-lang {
             font-size: 13px;
 
-            @media (max-width: $x-small) {
+            @media (max-width: var(--x-small-width)) {
               font-size: 12px !important;
             }
           }
