--- a/src/drumee/libs/reader/list/smart/skin/index.scss
+++ b/src/drumee/libs/reader/list/smart/skin/index.scss
@@ -20,7 +20,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $desk-scrollbar-color;
+      background-color: var(--default-scrollbar-color);
       cursor: pointer;
     }
 
