--- a/src/drumee/modules/desk/notifier/network/skin/index.scss
+++ b/src/drumee/modules/desk/notifier/network/skin/index.scss
@@ -1,12 +1,5 @@
-@import 'mixins/colors/index.scss';
-@import 'mixins/typo.scss';
-@import 'mixins/colors/index.scss';
-@import 'mixins/exports.scss';
-@import 'mixins/handles.scss';
-@import 'mixins/utils.scss';
-@import 'mixins/vendor.scss';
-@import 'mixins/z-index.scss';
 
+@import "mixins/drumee";
 .notifier-network{
   &__ui{
     position: absolute;
