--- a/src/drumee/builtins/window/account/skin/index.scss
+++ b/src/drumee/builtins/window/account/skin/index.scss
@@ -8,7 +8,7 @@
 @import "topbar";
 @import "container";
 @import "footer";
-@import "./vars.scss";
+// @import "./vars.scss";
 
 .window-account {
   &__ui {
