--- a/src/drumee/builtins/window/adminpanel/widget/dropdown-menu/skin/card-menu.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/dropdown-menu/skin/card-menu.scss
@@ -78,7 +78,7 @@
 
       &:after {
         background: var(--default-background);    
-        border-radius: $default-border-radius-top;
+        border-radius: var(--default-border-radius-top);
         content: "";
         height: 10px;
         left: 0;
