--- a/src/drumee/builtins/window/bigchat/widget/chat-item-forward/skin/index.scss
+++ b/src/drumee/builtins/window/bigchat/widget/chat-item-forward/skin/index.scss
@@ -165,7 +165,7 @@
       justify-content: center;
       width: 100%;
       top: 20px;
-      border-radius:$default-border-radius-top;
+      border-radius:var(--default-border-radius-top);
      // background-color: #f7f7f9;
       height: 100%;
       padding: 10px 10px 10px 21px;//10px;
