--- a/src/drumee/builtins/window/transferbox/skin/index.scss
+++ b/src/drumee/builtins/window/transferbox/skin/index.scss
@@ -34,7 +34,7 @@
     &.window__body {
       align-items: start !important;
       padding: 0;
-      border-radius:$default-border-radius-right;
+      border-radius:var(--border-radius-righ);
     }
   }
 
