--- a/src/drumee/skin/vars/index.scss
+++ b/src/drumee/skin/vars/index.scss
@@ -1,5 +1,11 @@
-@use './color.scss';
-@use './borders.scss';
-@use './box-shadow.scss';
-@use './default.scss';
-@use './widget.scss';
+// @use './account';
+@use './borders';
+@use './box-shadow';
+@use './color';
+@use './default';
+// @use './folder';
+// @use './sharebox';
+// @use './team';
+// @use './website';
+@use './widget';
+@use './z-index';
