--- a/src/drumee/builtins/player/audio/skin/index.scss
+++ b/src/drumee/builtins/player/audio/skin/index.scss
@@ -33,7 +33,7 @@
   &__header {
     background-color: var(--default-bg);
     border-bottom: none;
-    border-radius: $default-border-radius-top;
+    border-radius: var(--default-border-radius-top);
     color: var(--default-text-color);
     height: 44px;
     min-height: 44px;
