--- a/src/drumee/builtins/window/addressbook/skin/index.scss
+++ b/src/drumee/builtins/window/addressbook/skin/index.scss
@@ -1,6 +1,6 @@
 @import "mixins/drumee";
 @import './layout.scss';
-@import './vars.scss';
+// @import './vars.scss';
 
 .window-addressbook {
 
@@ -134,7 +134,7 @@
 
         &:after {
           background: var(--default-background);
-          border-radius: $default-border-radius-top;
+          border-radius: var(--default-border-radius-top);
           content: "";
           height: 10px;
           left: 0;
@@ -260,7 +260,7 @@
   &__max-content {
     align-items: flex-start;
     background: var(--default-background);
-    border-radius: $default-border-radius-right;
+    border-radius: var(--border-radius-righ);
     flex-grow: 1;
     height: 100%;
     justify-content: center;
