--- a/src/drumee/builtins/window/adminpanel/pages/members/room/skin/action-menu.scss
+++ b/src/drumee/builtins/window/adminpanel/pages/members/room/skin/action-menu.scss
@@ -35,7 +35,7 @@
 
       &:after {
         background: var(--default-background);    
-        border-radius: $default-border-radius-top;
+        border-radius: var(--default-border-radius-top);
         content: "";
       
         left: 0;
