--- a/src/drumee/builtins/window/adminpanel/widget/member-who-can-see/skin/filter-dropdown.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/member-who-can-see/skin/filter-dropdown.scss
@@ -89,7 +89,7 @@
 
         &:after {
           background: var(--default-background);
-          border-radius: $default-border-radius-top;
+          border-radius: var(--default-border-radius-top);
           content: "";
           height: 10px;
           left: 0;
