--- a/src/drumee/builtins/window/adminpanel/widget/members_list/skin/add-menu.scss
+++ b/src/drumee/builtins/window/adminpanel/widget/members_list/skin/add-menu.scss
@@ -37,7 +37,7 @@
 
       &:after {
         background: var(--default-background);
-        border-radius:$default-border-radius-top;
+        border-radius:var(--default-border-radius-top);
         content: "";
         left: 0;
         position: absolute;
