--- a/src/drumee/builtins/window/hub/sharebox/skin/index.scss
+++ b/src/drumee/builtins/window/hub/sharebox/skin/index.scss
@@ -15,7 +15,7 @@
   &__topbar {
     background-color: var(--sharebox-main);
     color: var(--default-text-reverse); 
-    border-radius: $default-border-radius-top; //4px 4px 0 0;
+    border-radius: var(--default-border-radius-top); //4px 4px 0 0;
     height: 44px;
     .dialog__button--close {
       color: var(--default-icon-reverse);
