--- a/src/drumee/builtins/window/skin/window.scss
+++ b/src/drumee/builtins/window/skin/window.scss
@@ -1,6 +1,6 @@
 @import "mixins/drumee";
 @import "warning.scss";
-@import "color.scss";
+@import "./vars";
 .window {
   /*--- Common styles for all groups of windows ---*/
   &__ui {
