--- a/src/drumee/builtins/window/transferbox/skin/action-menu.scss
+++ b/src/drumee/builtins/window/transferbox/skin/action-menu.scss
@@ -36,7 +36,7 @@
 
       &:after {
         background: var(--default-bg);
-        border-radius:$default-border-radius-top;
+        border-radius:var(--default-border-radius-top);
         content: "";
         height: 10px;
         left: 0;
