--- a/src/drumee/skin/vars/box-shadow.scss
+++ b/src/drumee/skin/vars/box-shadow.scss
@@ -13,14 +13,15 @@
 
   /*****************************Topbar*****************/
   --drumee-shadow-topbar: 0 2px 2px 1px rgba(63, 79, 117, 0.13), 0 6px 16px 0 rgba(86, 65, 113, 0.08), 0 2px 14px 0 rgba(194, 185, 203, 0.0);
-
+  --shadow-topbar: --drumee-shadow-topbar:
+  
+  
   /*****************************Account - préférence- language*****************/
-  --drumee-shadow-accountlist: 0 0px 5px 0px rgba(63, 79, 117, 0.13), 7px -6px 10px 0 rgba(86, 65, 113, 0.08), 0 2px 13px 0 rgba(194, 185, 203, 0.0);
+    --drumee-shadow-accountlist: 0 0px 5px 0px rgba(63, 79, 117, 0.13), 7px -6px 10px 0 rgba(86, 65, 113, 0.08), 0 2px 13px 0 rgba(194, 185, 203, 0.0);
 
   /*****************************Account - préférence- language*****************/
   --drumee-shadow-popup: 0 0 7px 0 rgba(0, 0, 0, 0.14), 0 0 6px 0 #f8fafc, 0 3px 5px 0 rgba(0, 0, 0, 0.2);
 
   /*****************************popup*****************/
   --drumee-shadow-block: 0 2px 6px 1px rgba(75, 72, 72, 0.10);
-
 }
